<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layots"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/features"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/add_svgrepo_com" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/message_square_lines_svgrepo_com" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/menuButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/menu_hamburger_svgrepo_com"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/settingsButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/settings_svgrepo_com"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="35dp" />

        <ImageView
            android:id="@+id/searchButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/search_svgrepo_com"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listOfFriendsLlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobbys">

        <TextView
            android:id="@+id/listOfFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textViewBF1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bf1"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textViewBF2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bf2"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textViewBF3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bf3"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textViewBF4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bf4"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textViewBF5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bf5"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/hobbys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginBottom="350dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info">

        <ImageView
            android:id="@+id/hobbyGadanie"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ball_crystal_magic_svgrepo_com" />

        <ImageView
            android:id="@+id/hobbyDrawing"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/painting_palette_board_outline_svgrepo_com" />

        <ImageView
            android:id="@+id/hobbyWriting"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/writing_svgrepo_com" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="350dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/yearOfBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth"
            android:textColor="@color/black"
            android:textSize="15dp"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/mainPhoto"
            android:layout_width="155dp"
            android:layout_height="166dp"
            android:src="@mipmap/taras_photo_1_foreground" />

        <ImageView
            android:id="@+id/secondPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/taras_photo_2_foreground" />

        <ImageView
            android:id="@+id/thirdPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/taras_photo_3_foreground" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutToEnter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:clickable="true"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/enterLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Enter login"/>

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="Enter password"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:text="Enter"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
